--- a/index.html
+++ b/index.html
@@ -334,9 +334,20 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/react1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/react1.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Expense Tracker"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Patel-Aman/ExpenseTracker" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Github"><i class="bx bx-plus"></i></a>
                 <a href="https://expensetracker-jsu7.onrender.com/" title="Live"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Nft-minter.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://github.com/Patel-Aman/Mint-nft_interface" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Github"><i class="bx bx-plus"></i></a>
+                <a href="https://mint-nft.onrender.com/" title="NFT minter Live"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -345,25 +356,14 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/web1.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="To do List"><i class="bx bx-plus"></i></a>
-                <a href="https://patel-aman.github.io/TodoList/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/Patel-Aman/TodoList" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Github"><i class="bx bx-plus"></i></a>
+                <a href="https://patel-aman.github.io/TodoList/" title="Live"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
