added github link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
         <h1 class="text-light"><a href="index.html">Aman Patel</a></h1>
         <div class="social-links mt-3 text-center">
+          <a href="https://github.com/Patel-Aman" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://twitter.com/AmanPatel1653" class="twitter"><i class="bx bxl-twitter"></i></a>
           <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <a href="https://www.instagram.com/aman__patel.__/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -94,7 +95,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Full stack Developer &amp; Blockchain Developer</h3>
             <p class="fst-italic">
-              I have been working with React fro more than 3 months. I'm new in Blockchain
+              I have been working with React for more than 3 months. I'm new in Blockchain
               Hope to catch up with the rest of world soon.
             </p>
             <div class="row">
@@ -252,10 +253,11 @@
                 <li>patel.26@iitj.ac.in / patelaman1653@gmail.com</li>
               </ul>
             </div>
-
+          </div>
+          <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor in Mechanical Engineering</h4>
+              <h4>Bachelor of Technology in Mechanical Engineering</h4>
               <h5>2020 - 2024</h5>
               <p><em>Indian Institute of Technology, Jodhpur</em></p>
               <p>
